<resources>
    <string name="app_name">SafeKiddo Exercise</string>
    <string name="edit">Edit</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="select_image">Select image:</string>
    <string name="image">Image</string>
    <string name="post_title">Post title:</string>
    <string name="post_description">Post description:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert !</string>
    <string name="alert_message">Do you want to delete this Post?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="update">Update</string>
</resources>