<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/like"
        app:showAsAction="always"
        android:icon="@drawable/outline_favorite_border_24"
        android:iconTint="@color/white"
        android:title="@string/like"/>
    <item
        android:id="@+id/liked"
        app:showAsAction="always"
        android:icon="@drawable/outline_favorite_24"
        android:iconTint="@color/white"
        android:title="@string/liked"
        android:visible="false"/>
    <item
        android:id="@+id/edit"
        app:showAsAction="always"
        android:icon="@drawable/outline_edit_24"
        android:iconTint="@color/white"
        android:title="@string/edit"/>
</menu>